@@ -1,9 +1,7 @@
 package cellarium.db.converter.types;
 
-import jdk.incubator.foreign.MemoryAccess;
-import jdk.incubator.foreign.MemorySegment;
-
-import java.nio.ByteBuffer;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.ValueLayout;
 
 public final class BooleanMemorySegmentConverter implements MemorySegmentConverter<Boolean> {
     public static final BooleanMemorySegmentConverter INSTANCE = new BooleanMemorySegmentConverter();
@@ -16,12 +14,7 @@ public final class BooleanMemorySegmentConverter implements MemorySegmentConvert
             return null;
         }
 
-        final MemorySegment memorySegment = MemorySegment.ofByteBuffer(
-                ByteBuffer.allocate(Byte.BYTES)
-        );
-
-        MemoryAccess.setByte(memorySegment, (byte) (value ? 1 : 0));
-        return memorySegment;
+        return ARENA_OF_AUTO.allocate(ValueLayout.JAVA_BYTE, (byte) (value ? 1 : 0));
     }
 
     @Override
@@ -30,6 +23,6 @@ public final class BooleanMemorySegmentConverter implements MemorySegmentConvert
             return null;
         }
 
-        return MemoryAccess.getByte(value) == 1;
+        return value.get(ValueLayout.JAVA_BYTE, 0) == 1;
     }
 }
